# ai_szponters

./: README
cloud/: README.md  app.py  sensors.csv  sensors.db
nRF54L15/: CMakeLists.txt  prj.conf
nRF54L15/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
nRF54L15/src/: main.c
nRF7002/: CMakeLists.txt  ISKRA_TODO.md  Kconfig  README.rst  prj.conf
nRF7002/boards/: nrf5340dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.conf
nRF7002/src/: ble_central_rx.c  ble_central_rx.h  data.c  data.h  index.html  main.c  node_socket_client.c  node_socket_client.h  paired_devices.c  paired_devices.h  pairing.html  predictor.c  predictor.h
node-socket-server/: README.md  package.json  probe-board-socket.js  server.js
regresion/: index.py
